# gws-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  package.json
.changeset/: add-cargo-audit-ci.md  drive-upload-convert.md  fix-forward-threading.md  move-version-to-metadata.md  op-auth-backend.md  plugin-marketplace.md  security-hardening-rollup.md  sigterm-shutdown.md  testing-improvement.md
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: audit.yml
commands/: gws-agenda.md  gws-announce-file.md  gws-as-content-creator.md  gws-as-customer-support.md  gws-as-event-coordinator.md  gws-as-exec-assistant.md  gws-as-hr-coordinator.md  gws-as-it-admin.md  gws-as-project-manager.md  gws-as-researcher.md  gws-as-sales-ops.md  gws-as-team-lead.md  gws-email-to-task.md  gws-inbox.md  gws-login.md  gws-logout.md  gws-meeting-prep.md  gws-standup.md  gws-status.md  gws-weekly-digest.md  gws.md
docs/: skills.md
scripts/: version-sync.sh
skills/gws-admin-reports/: SKILL.md
skills/gws-calendar/: SKILL.md
skills/gws-calendar-agenda/: SKILL.md
skills/gws-calendar-insert/: SKILL.md
skills/gws-chat/: SKILL.md
skills/gws-chat-send/: SKILL.md
skills/gws-classroom/: SKILL.md
skills/gws-docs/: SKILL.md
skills/gws-docs-write/: SKILL.md
skills/gws-drive/: SKILL.md
skills/gws-drive-upload/: SKILL.md
skills/gws-events/: SKILL.md
skills/gws-events-renew/: SKILL.md
skills/gws-events-subscribe/: SKILL.md
skills/gws-forms/: SKILL.md
skills/gws-gmail/: SKILL.md
skills/gws-gmail-forward/: SKILL.md
skills/gws-gmail-read/: SKILL.md
skills/gws-gmail-reply/: SKILL.md
skills/gws-gmail-reply-all/: SKILL.md
skills/gws-gmail-send/: SKILL.md
skills/gws-gmail-triage/: SKILL.md
skills/gws-gmail-watch/: SKILL.md
skills/gws-keep/: SKILL.md
skills/gws-meet/: SKILL.md
skills/gws-modelarmor/: SKILL.md
skills/gws-modelarmor-create-template/: SKILL.md
skills/gws-modelarmor-sanitize-prompt/: SKILL.md
skills/gws-modelarmor-sanitize-response/: SKILL.md
skills/gws-people/: SKILL.md
skills/gws-shared/: SKILL.md
skills/gws-sheets/: SKILL.md
skills/gws-sheets-append/: SKILL.md
skills/gws-sheets-read/: SKILL.md
skills/gws-slides/: SKILL.md
skills/gws-tasks/: SKILL.md
skills/gws-workflow-email-to-task/: SKILL.md
skills/gws-workflow-file-announce/: SKILL.md
skills/gws-workflow-meeting-prep/: SKILL.md
skills/gws-workflow-standup-report/: SKILL.md
src/: auth_commands.rs  client.rs  executor.rs  generate_skills.rs  main.rs  oauth_config.rs  validate.rs
(+69 files in other folders)
